# TiddlyWiki5

./: .13,082,761,331,670,030_backup.txt.swp  .fix.py.swp  .gitignore  13,082,761,331,670,030_cleaned.txt  DUALITY_ENGINE_README.md  MOBIUS_DESCENT_ANALYSIS.md  README.md  README_golden_bridge.md  advanced_duality_analysis.py  agentq.py  attractor_explorer.py  attractor_results.json  attractor_results.toml  attractor_results.txt  code_mathematical_model.json  code_mathematical_model.toml  degenerate_transition_demo.py  degenerate_transition_results.json  demo_attractor_system.py  demo_optimization.py  duality_engine_demo.py  duality_research_framework.py  evolutionary_math_demo.py  existential_math_demo.py  export_demo.py  golden_bridge_demo.py  mathematical_attractors.py  mobius_code_analysis.toml  mobius_code_analyzer.py  mobius_descent_tower.py  mobius_lie_engine.py  monster_moonshine_summary.py  optimizer.py  optimizer.toml  pyproject.toml  readme.md  recursive-palette-encoder.js  rewriter.py  rewriter.toml  rewriter_minimal.py  (+15 more)
.in/eonix/: README.md  pyproject.toml
.in/eonix/docs/: GLYPHS.md
.in/eonix/eonix/: __init__.py
.in/eonix/eonix/cli/: main.py
.in/eonix/eonix/core/: emitter.py  listen.py  resonance.py
.in/eonix/eonix/types/: octwave.py
.in/eonix/eonix/zipc/: reflect.py
.in/eonix/tests/: test_emits.py
.out/: ZLib_Procedural_Garden_Concept.md  libz_vm_simple.py  minimal_test.py  minimal_with_rules.py  rewriter.py  sample_program.py  test_fix.py  vm_translation_results.json  zeta_ca_web_demo.html  zeta_fractal_ca.py  zlib_procedural_garden.html
(+108 files in other folders)
