[project]
name = "iontheprize"
version = "0.1.0"
description = "Research workspace for mathematical and computational paradigms"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Research Team", email = "research@example.com"}
]
dependencies = [
    "numpy",
    "mpmath",
    "pytest>=8.4.1",
    "matplotlib>=3.10.5",
    "scipy>=1.16.1",
    "sympy>=1.14.0",
    "textblob>=0.19.0",
    "networkx>=3.5",
    "torch>=2.8.0",
    "jax>=0.7.0",
    "jaxlib>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.scripts]
rh-analysis = "src.main:main"
rh-demo = "src.main:main"

[tool.uv.sources]
rh = { workspace = true }

